# de-docker-terraform

./: README.md
kestra-orchestration/: .gitignore  pyproject.toml
kestra-orchestration/flows/: 03_getting_started_data_pipeline.yaml  08_gcp_taxi.yaml  load_ny_taxi_gcp.yaml  verify_ny_taxi_connection.yaml
ny_taxi_data_warehouse/: Dockerfile  ingest.py  main.py  pyproject.toml
pipeline/: README.md  ingest_data_pd.py  ingest_data_pq.py  pyproject.toml  test_uv_py.py
workflow-orchestration/: README.md  docker-compose.yml  main.py
