[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adbc-driver-manager>=1.10.0",
    "adbc-driver-postgresql>=1.10.0",
    "click>=8.1.7",
    "connectorx>=0.4.4",
    "fsspec>=2026.1.0",
    "pandas>=2.3.3",
    "polars>=1.37.1",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=22.0.0",
    "sqlalchemy>=2.0.45",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "pgcli>=4.4.0",
]
